--- a/Angular/gama-angular/src/app/todo-item/todo-item.component.html
+++ b/Angular/gama-angular/src/app/todo-item/todo-item.component.html
@@ -1,4 +1,7 @@
 <div>
-    
-    <b>Titulo: </b> {{data}}
+    <b>Id: </b> {{data.id}} <br>
+    <b>Titulo: </b> {{data.title}} <br>
+    <b>Descrição: </b> {{data.description}} <br>
+    <b>Finalizado: </b> {{data.finished ? 'Sim' : 'Não'}} <br>
+    <b>Data: </b> {{data.date}}<br>
 </div>
