--- a/Angular/gama-angular/src/app/app.component.html
+++ b/Angular/gama-angular/src/app/app.component.html
@@ -1,16 +1,10 @@
-<app-contador></app-contador>
 
 
-App: {{cont}}
 
+
+<a routerLink="/">Home</a>  | <a routerLink="/todos">Todos</a> | <a routerLink="/contador">Contador</a> | <a routerLink="/contador-botoes">Contador Botões</a> | <a routerLink="/cep">Buscar CEP</a> | <a routerLink="/add-todo">Add todo</a>
 <br>
-------------------------------------
-
-
-<app-contador-botoes></app-contador-botoes>
-
-
 <br>
-<a routerLink="/">Home</a>  | <a routerLink="/todos">Todos</a>
+
 
 <router-outlet></router-outlet>
