--- a/Angular/gama-angular/src/app/app.component.html
+++ b/Angular/gama-angular/src/app/app.component.html
@@ -1,8 +1,15 @@
 
+Olá, {{email}}
 
+<br>
+<br>
+<br>
+<br>
 
-
-<a routerLink="/">Home</a>  | <a routerLink="/todos">Todos</a> | <a routerLink="/contador">Contador</a> | <a routerLink="/contador-botoes">Contador Botões</a> | <a routerLink="/cep">Buscar CEP</a> | <a routerLink="/add-todo">Add todo</a>
+<a routerLink="/">Home</a>  | <a routerLink="/todos">Todos</a> | 
+<a routerLink="/contador">Contador</a> | <a routerLink="/contador-botoes">Contador Botões</a> 
+| <a routerLink="/cep">Buscar CEP</a> | <a routerLink="/add-todo">Add todo</a> 
+| <a routerLink="/auth/login">Login</a> | <a routerLink="/auth/register">Register</a>
 <br>
 <br>
 
