--- a/Angular/gama-angular/src/app/app.component.html
+++ b/Angular/gama-angular/src/app/app.component.html
@@ -1,15 +1,23 @@
 
-Olá, {{email}}
 
-<br>
-<br>
-<br>
-<br>
+<div *ngIf="user$ | async; else deslogado">
+    Olá, {{(user$ | async).email}} <button (click)='logout()'>sair</button><br>
+    
+    | <a routerLink="/">Home</a>  | 
+    <a routerLink="/todos">Todos</a> |
+     <a routerLink="/todos/add">Add todo</a> |
+</div>
+<ng-template #deslogado>
 
-<a routerLink="/">Home</a>  | <a routerLink="/todos">Todos</a> | 
-<a routerLink="/contador">Contador</a> | <a routerLink="/contador-botoes">Contador Botões</a> 
-| <a routerLink="/cep">Buscar CEP</a> | <a routerLink="/add-todo">Add todo</a> 
-| <a routerLink="/auth/login">Login</a> | <a routerLink="/auth/register">Register</a>
+        <a routerLink="/">Home</a> | 
+        <a routerLink="/cep">Buscar CEP</a> |  
+        <a routerLink="/auth/login">Login</a> | 
+        <a routerLink="/auth/register">Register</a> |
+        <a routerLink="/contador">Contador</a> |
+        <a routerLink="/contador-botoes">Contador Botões</a> 
+</ng-template>
+
+
 <br>
 <br>
 
