--- a/Angular/gama-angular/src/app/todo/lista-todos/lista-todos.component.html
+++ b/Angular/gama-angular/src/app/todo/lista-todos/lista-todos.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li *ngFor="let todo of todos$ | async">
-        <app-todo-item [data]="todo"></app-todo-item>
+    <li *ngFor="let todo of todos">
+        <app-todo-item [data]="todo" (deleteEvent)="onDeleteItem($event)"></app-todo-item>
     </li>
 </ul>
