--- a/Angular/gama-angular/src/app/todo/todo-item/todo-item.component.html
+++ b/Angular/gama-angular/src/app/todo/todo-item/todo-item.component.html
@@ -4,4 +4,8 @@
     <b>Descrição: </b> {{data.description}} <br>
     <b>Finalizado: </b> {{data.finished | bool }} <br>
     <b>Data: </b> {{data.date  | date: 'dd/MM/yyyy'}}<br>
+
+
+    <button (click)="editar()">Editar</button>
+    <button (click)="apagar()">Apagar</button>
 </div>
